syntax = "proto3";
//Common               1-9999
//Login		       10000-19999
//VirtualFootball      20000-29999
//RealFootBall	   30000-39999

package kzgame.svrcli.msg;

//回复状态
message Res_State
{
	enum Type {UNSET = 0; ID = 1;}
	int32 state = 1;           // -1 没有记录
}

///////////////////////////////////////////////////////////////////////////
//登录
///////////////////////////////////////////////////////////////////////////
//登录请求
message Ask_Login
{
	enum Type {UNSET = 0; ID = 10000;}
}
//登录回应
message Res_Login
{
	enum Type {UNSET = 0; ID = 10001;}
	int32 result = 1;	//0登录成功 1失败 其他预留
	double coin = 2;		//游戏币  成功时才有效
	string name = 3;	//玩家名称
}
//账号在其他地方登陆
message Push_OtherLogin
{
	enum Type {UNSET = 0; ID = 10002;}
}

///////////////////////////////////////////////////////////////////////////
//虚拟足球
///////////////////////////////////////////////////////////////////////////
//进入虚拟足球页面信息请求
message Ask_VirtualFootMainInfo
{
	enum Type {UNSET = 0; ID = 20000;}
}
//比赛信息
message MatchInfo
{
	//比赛状态
	int32 matchState = 1;		//比赛状态：0等待开始、1正在进行、2比赛结束（等待开奖）、3、比赛结束（开奖）
	int32 lastSecond = 2;		//这个比赛状态剩余时间（秒）
	//两队交锋场次（matchState为0时有效，其他情况忽略）
	int32 hostWinNum = 3;		//主队胜场次
	int32 drawNum = 4;		//平
	int32 guestWinNum = 5;		//客队胜场次
	int32 hostTeamId = 6;		//主队ID
	int32 guestTeamId = 7;		//客队ID
	string issue = 8;		//期号(如只需三位，则客户端可裁剪字符串留最后三位)
}
//比分与盘口信息
message GoalAndBetArea
{
	//球队进球信息
	int32 hostTeamGoal = 1;		//主队进球数
	int32 guestTeamGoal = 2;	//客队进球数
	////盘口
	//猜胜负平
	float hostWinTimes = 3;		//主胜倍数
	int32 hostWinSupport = 4;	//主胜支持率
	float drawTimes = 5;		//平  倍数
	int32 drawSupport = 6;		//平  支持率
	float guestWinTimes = 7;	//客胜倍数
	int32 guestWinSupport = 8;	//客胜支持率
	//猜下一队进球
	float hostNextGoalTimes = 9;	//主队进球倍数
	int32 hostNextGoalSupport = 10;	//主队进球支持率
	float zeroGoalTimes = 11;	//无进球  倍数
	int32 zeroGoalSupport = 12;	//无进球  支持率
	float guestNextGoalTimes = 13;	//客队进球倍数
	float guestNextGoalSupport = 14;//客队进球支持率
	//当前事件(matchState为1时才有效)
	int32 event = 15;		//0无事件 1主队控球 2主队进攻 3主队危险进攻 4客队控球 5客队进攻 6客队危险进攻 7主队进球 8客队进球
}
//盘口已投注记录
message AreaBettedInfo{
	int32 betArea = 1;		//该用户已下注区域
	int32 betNum = 2;		//该用户已下注次数
	int32 allCoin = 3;		//该用户已下注所有金额
}
//虚拟足球页面信息回应(回复当前信息)
message Res_VirtualFootMainInfo
{
	enum Type {UNSET = 0; ID = 20001;}
	MatchInfo matchInfo = 1;	//比赛状态
	GoalAndBetArea goalAndBetArea = 2;//比分及盘口信息
	int32 betItem1 = 3;		//下注项1金额
	int32 betItem2 = 4;
	int32 betItem3 = 5;
	repeated AreaBettedInfo areaBettedInfoList = 6;
}
//虚拟足球比赛状态推送(服务端主动通知客户端)
message Push_MatchInfo
{
	enum Type {UNSET = 0; ID = 20002;}
	MatchInfo matchInfo = 1;	//比赛状态
}
//虚拟足球比分与盘口信息推送
message Push_GoalAndBetArea
{
	enum Type {UNSET = 0; ID = 20003;}
	GoalAndBetArea goalAndBetArea = 1;//比分与盘口信息
}
//进入竞猜记录页面信息请求
message Ask_GuessingRecord
{
	enum Type {UNSET = 0; ID = 20004;}
	int32 page = 1;			//一页默认12行，按投注日期由近到远排列,申请页无数据时，返回数组为空
}
//一条投注记录
message GuessingRecord
{
	string issue = 1;		//期号
	int32 hostTeamId = 2;		//主队ID
	int32 guestTeamId = 3;		//客队ID
	uint64 betDate = 4;		//投注时间（时间戳）
	int32 betArea = 5;		//投注区域 1主胜 2平 3客胜 4主队进球 5无进球 6客队进球
	float betTimes = 6;		//投注时的赔率
	int32 betCoin = 7;		//投注金额
	int32 getCoin = 8;		//获得金额
	int32 status = 9;		//0未开奖 1不中 2中 3结算异常
}
//进入竞猜记录页面信息回应
message Res_GuessingRecord
{
	enum Type {UNSET = 0; ID = 20005;}
	repeated GuessingRecord guessingRecords = 1;
}
//进入历史开奖页面信息请求
message Ask_VirtualHistory
{
	enum Type {UNSET = 0; ID = 20006;}
	int32 page = 1;			//一页默认12行，按比赛日期由近到远排列,申请页无数据时，返回数组为空
}
//一条开奖记录
message VirtualHistory
{
	string issue = 1;		//期号
	int32 hostTeamId = 2;		//主队ID
	int32 hostTeamGoal = 3;		//主队进球数
	int32 guestTeamId = 4;		//客队ID
	int32 guestTeamGoal = 5;	//客队进球数
}
//进入历史开奖页面信息回应
message Res_VirtualHistory
{
	enum Type {UNSET = 0; ID = 20007;}
	repeated VirtualHistory virtualHistory = 1;
}
//虚拟足球投注请求
message Ask_VirtualBet
{
	enum Type {UNSET = 0; ID = 20008;}
	int32 betArea = 1;		//投注区域 1主胜 2平 3客胜 4主队进球 5无进球 6客队进球
	int32 coinItem = 2;		//投注金额项 1第一项（100） 2第二项（1000） 3第三项（10000）
}
//虚拟足球投注回应
message Res_VirtualBet
{
	enum Type {UNSET = 0; ID = 20009;}
	int32 result = 1;		//0成功 1参数错误 2当前时间不可投注
	double coin = 2;		//游戏币  成功时才有效
	int32 betArea = 3;
	int32 coinItem = 4;
}
//虚拟足球中奖得钱消息
message Push_WinBet
{
	enum Type {UNSET = 0; ID = 20010;}
	int32 winCoin = 1;		//赢得钱
	double coin = 2;			//赢钱之后剩多少钱
}
//盘口修改推送
message Push_BetArea
{
	enum Type {UNSET = 0; ID = 20011;}
	//猜胜负平
	float hostWinTimes = 1;		//主胜倍数
	float drawTimes = 2;		//平  倍数
	float guestWinTimes = 3;	//客胜倍数
	//猜下一队进球
	float hostNextGoalTimes = 4;	//主队进球倍数
	float zeroGoalTimes = 5;	//无进球  倍数
	float guestNextGoalTimes = 6;	//客队进球倍数
}

//推送虚拟足球投注项信息
message Push_VtBetItems
{
	enum Type {UNSET = 0; ID = 20012;}
	int32 item1 = 1;                              
	int32 item2 = 2;
	int32 item3 = 3;
}

///////////////////////////////////////////////////////////////////////////
//真实足球
///////////////////////////////////////////////////////////////////////////
//比赛信息
message RlScheduleInfo
{
	int32  sceheduleId = 1;      //赛事id
	int32  phase = 2;            //期号
	int32  leagueId = 3;         //联赛id
	string matchName = 4;        //赛事名
	string weekday = 5;          //星期几
	string officialNum = 6;      //场次
	string endSale = 7;          //比赛时间
	string homeName = 8;         //主队名字
	string awayName = 9;	     //客队名字
	string handicap = 10;        //让球
	string oddsJingcai = 11;     //胜平负
	string oddsRangqiu = 12;     //让球胜平负
	int32  hotFlag = 13;         //热门赛事 0非热门 1热门
}

//投注配置
message RlBetConfig
{
	int32 betItem1 =1;						  //下注项1金额
	int32 betItem2 = 2;
	int32 betItem3 = 3;
	int32 betNumLimit = 4;    				  //最多压几场比赛
	int32 betCoinLimit = 5;                   //最高下注金额 
}

//后台公告
message Announce
{
	string content = 1;                       //公告内容
}

//真实足球页面信息请求
message Ask_RealFootMainInfo
{
	enum Type {UNSET = 0; ID = 30000;}
}

//真实足球页面信息回应(回复当前信息)
message Res_RealFootMainInfo
{
	enum Type {UNSET = 0; ID = 30001;}
	repeated RlScheduleInfo rlScheduleInfo =1;     //列表的比赛信息
	RlBetConfig betConfig = 2;                     //投注配置
	int32 maxLeagueId = 3;                         //最大联赛id
	repeated Announce announce =4;                 //公告
}



//比赛赛事投注比例
message Ask_RealFootBetRateInfo
{
	enum Type {UNSET = 0; ID = 30002;}
	int32 sceheduleId = 1;                           //赛事id
	int32 betClass = 2;                              //1 胜平负投注比例 2 让球胜平负投注比例
}

//真实足球比赛赛事投注比例回复
message Res_RealFootBetRateInfo
{
	enum Type {UNSET = 0; ID = 30003;}
	int32 sceheduleId = 1;                 //赛事id 
	string historyInfo = 2;                //历史交锋    {"warTotal":,"homename":,"win":,"flat":,"lose":};
	string lastesInfo = 3;                 //最近战绩	 {"homeWin":,"homeFlat":,"homeLose":,"awayWin":,"awayFlat":,"awayLose":}
	string oddsAvg = 4;		               //平均赔率	 {"h":,"d":,"a":}
	string betRate = 5;         		   //投注比例    {"h":,"d":,"a":}人数,具体比例客户端算
}

//服务端主动通知客户端---真实足球赛事信息变化推送
message Push_ScheduleInfo
{
	enum Type {UNSET = 0; ID = 30004;}
	repeated RlScheduleInfo rlScheduleInfo = 1;	//赛事信息
}

//投注信息
message RlBetInfo
{
	int32 sceheduleId = 1;                 //投注赛事id
	int32 betClass = 2;                    //玩法  1胜平负  2 让球胜平负
	int32 betArea = 3;                     //投注区域  1主胜 2平  3客胜
}

//投注计划
message RlBetPlan
{
	repeated RlBetInfo betInfo = 1;  	   //每注详情  
}

//赛事唯一标识
message RlScheduleId
{
	int32 scheduleId = 1;                   //赛事id 
}

//串场类型
message RlbetType
{
	int32 betType = 1;                     //投注类型    1  1场     2 2串1    3 3串1  4 4串1
}

//真实足球投注信息请求
message Ask_RealFootBetInfo
{
	enum Type {UNSET = 0; ID = 30005;}             
	int32 betNum = 1;                        //投注数目   
	int32 betTime = 2;                       //投注倍数
	int32 betCoinArea = 3;                   //投注金币区域  1  100 2 1000 3 10000
	repeated RlScheduleId schedule = 4;      //赛事id
	repeated RlbetType betType = 5;          //串场类型
	repeated RlBetPlan betPlan = 6;          //投注详情     
}

//回复真实足球投注信息请求
message Res_RealFootBetInfo
{
	enum Type {UNSET = 0; ID = 30006;}
	int32 status = 1;			 //0成功 -1操作数据库失败 其它参数错误  (一场比赛只能压一次 /下注金额超过最大下注金额/最多压4场比赛等)
	double coin = 2;			 //游戏币
}

//投注记录信息
message RlBetRecordInfo
{
	string  recordId = 1;         //投注记录id
	int32   betType = 2; 		  //投注类型  1  1场     2 2串1    3 3串1  4 4串1
	int32   jingcaiType = 3;      //竞猜类型: 1 胜平负 2让球胜平负  3 混合过关
	string  betDate = 4;          //投注时间
	int32   betCoin = 5;          //投注金币
	int32   distributeCoin= 6;    //猜中获取金币
	int32   betStatus = 7;        //竞猜状态  0 等待开奖  1中奖   2不中  
	string  teamName = 8;         //投注项中第一只队伍名字  
}

//真实足球我的竞猜请求
message Ask_RealFootballBetRecords
{
	enum Type {UNSET = 0; ID = 30007;}
	int32 type=1;            //类型  0全部  1猜中  2待开奖
	int32 page=2;            //页数	
}


//回复真实足球我的竞猜请求
message Res_RealFootBetRecords
{
	enum Type {UNSET = 0; ID = 30008;}
	repeated RlBetRecordInfo betRecordInfo = 1;  
}

//赛事玩法
message RlBetContent
{
	int32 betClass = 1;     //投注类型  1胜平负  2让球胜平负
	string odds = 2;        //对应的赔率 {h:,d:,a:} h主 d平 a客 区域赔率
	string betArea = 3;     //投注区域   {h:,d:,a:} h主 d平 a客 1代表有投该赛事区域  0代表没投
	int32  result = 4;      //开奖结果   0未开奖  -1取消赛事  1(主胜/让球胜)   2(平/让球平)   3(主负/让球负)    
}

//投注的赛事项
message RlBetItems
{
	string teamName = 1;    			  //两只球队名字
	string handicap = 2;                  //让球数
	repeated RlBetContent betContent =3;  //投注内容
}

//真实足球我的竞猜详情请求
message Ask_RealFootBetDetails
{
	enum Type {UNSET = 0; ID = 30009;}
	string  recordId = 1;                  //投注记录id
}

//回复真实足球我的竞猜详情的请求
message Res_RealFootBetDetails
{
	enum Type {UNSET = 0; ID = 30010;}
	string recordId = 1;                   //投注记录id
	string matchDate = 2;                  //比赛时间(单场比赛显示)
	repeated RlbetType betType = 3;        //串场类型
	repeated RlBetItems betItems = 4;      //投注的赛事项
}

//比赛记录信息
message RlScheduleRecords
{
	int32  phase = 1;            //期号
	string matchName = 2;        //赛事名
	string officialNum = 3;      //场次
	string weekday = 4;          //星期几
	string endSale = 5;          //比赛时间
	string homeName = 6;         //主队名字
	string awayName = 7;	     //客队名字
	string firstHalf = 8;        //半场比分
	string finalScore = 9;       //全场比分
}

//真实足球比赛记录请求
message Ask_RealFootRecords
{
	enum Type {UNSET = 0; ID = 30011;}
}

//回复真实足球比赛记录请求
message Res_RealFootRecords
{
	enum Type {UNSET = 0; ID = 30012;}                   					  
	repeated RlScheduleRecords scheduleRecords = 1;  //比赛记录信息
}


//服务端主动通知客户端--停止下注的比赛
message Push_StopBetSchedules
{
	enum Type {UNSET = 0; ID = 30013;} 
	repeated RlScheduleId rlScheduleId = 1;
}

//服务端主动通知客户端---新增赛事
message Push_AddScheduleInfo
{
	enum Type {UNSET = 0; ID = 30014;}
	repeated RlScheduleInfo rlscheduleInfo = 1;	//赛事信息
}

//推送公告信息
message Push_Announce
{
	enum Type {UNSET = 0; ID = 30015;}
	int32 status = 1;                              //-1 无公告 0有公告
	repeated Announce announce =2;                 //公告
}

//推送竞猜足球投注项信息
message Push_RlBetItems
{
	enum Type {UNSET = 0; ID = 30016;}
	int32 item1 = 1;                              
	int32 item2 = 2;
	int32 item3 = 3;
	int32 numLimit = 4;
	int32 coinLimit = 5;
}









