syntax="proto3";
package pb.wallet;
// 钱包相关接口协议

/*
* public
*/
// 公用响应消息
message RspCommon{
	int32 ret = 1;    			// 响应码
	string msg = 2;   			// 消息
}


// 添加交易
message AddTrade{
	string out_trade_no = 1;  	// 平台订单号
	int32 type = 2;			  	// 操作类型（1-平台转入，2-平台转出，3-用户转账）
	int32 out_type = 3;			// 平台自定义订单类型
	int32 user_id = 4;			// 用户id
	string money = 5;			// 金额(最多保留7位小数，例如:”1.0000001”) 
	int32 money_from = 6;		// 转账来源用户id
	string memo = 7;			// 备注
}

// 添加交易（响应）
message RspAddTrade{
	int32 ret = 1;    			// 响应码
	string msg = 2;   			// 消息
	string trade_no=3;			// 钱包系统交易订单号
	string balance = 4;			// 余额(最多保留7位小数，例如:”1.0000001”)
}


// 用户余额查询
message GetUserBalance{
	int32 user_id = 1;			// 用户id
}

// 用户余额查询（响应）
message RspGetUserBalance{
	int32 ret = 1;    			// 响应码
	string msg = 2;   			// 消息
	string balance = 3;			// 余额(最多保留7位小数，例如:”1.0000001”)
}


// 获取平台/用户资金流水
message GetTrades{
	string trade_no=1;			// 钱包系统交易订单号
	string out_trade_no = 2;  	// 平台订单号
	int32 user_id = 3;			// 用户id
	int32 platform_id = 4; 		// 平台标识
	int32 type = 5;			  	// 操作类型（1-平台转入，2-平台转出，3-用户转账）
	int32 out_type = 6;			// 平台自定义订单类型
	string start_time = 7;		// 开始时间
	string end_time = 8; 		// 结束时间
	int32 page_num =9; 			// 每页多少条
	int32 cur_page =10; 		// 当前页码(从1开始)
}


// 获取平台/用户资金流水（响应）
message RspGetTrades{
	int32 ret = 1;    			// 响应码
	string msg = 2;   			// 消息
	int32 count = 3;			// 记录总条目
	repeated Trade list = 4;		// 订单列表
	
}
// 订单
message Trade{
	int32 id = 1;
	string trade_no = 2;		// 钱包系统交易订单号
	string out_trade_no = 3;  	// 平台订单号
	int32 user_id = 4;			// 用户id
	int32 platform_id = 5; 		// 平台标识
	int32 type = 6;			  	// 操作类型（1-平台转入，2-平台转出，3-用户转账）
	int32 out_type = 7;			// 平台自定义订单类型
	string money = 8;			// 金额(最多保留7位小数，例如:”1.0000001”) 
	int32 money_from = 9;		// 转账来源用户id
	string balance = 10;		// 余额(最多保留7位小数，例如:”1.0000001”)
	string memo = 11;			// 备注
	string created_time = 12; 	// 创建时间
}



// msg for wallet.nsq.consumer
message NsqAddTrade{
	uint32 func_id = 1;       	// 功能id
	uint32 platform_id = 2;		// 平台id
	string trade_no = 3;		// 交易单号
	string balance = 4;			// 交易后余额度
	string created_time = 5;	// 交易时间
	AddTrade trade = 6;			// 订单
}








